<resources>
    <string name="app_name">Ebazaar</string>
    <string name="select_photo">Select photo</string>
    <string name="product_price">Product Price</string>
    <string name="product_name">Product Name</string>
    <string name="submit">Submit</string>
    <string name="signout">Signout</string>
    <string name="home">Home</string>
    <string name="open_draw">Open</string>
    <string name="close_draw">Close</string>
    <string name="see_if_it_is_available">see if it is available</string>
    <string name="product_details">55</string>
</resources>